--- a/example.html
+++ b/example.html
@@ -5,13 +5,9 @@
     <title></title>
     <script src="./bower_components/webcomponentsjs/webcomponents.js"></script>
 
-    <!--<link rel="import" href="./index.html">-->
-    <link rel="import" href="./dist/name-paper.html">
+    <link rel="import" href="./dist/example-component.html">
 </head>
 <body>
-    <div style="width: 100px; height: 100px;">
-        <!--<my-avatar2 service="twitter" username="leggetter"></my-avatar2>-->
-        <name-paper></name-paper>
-    </div>
+    <example-component></example-component>
 </body>
 </html>
