--- a/test/default.html
+++ b/test/default.html
@@ -4,16 +4,16 @@
     <meta charset="utf-8">
     <script src="../bower_components/webcomponentsjs/webcomponents.js"></script>
     <script src="../node_modules/web-component-tester/browser.js"></script>
-    <link rel="import" href="../dist/name-paper.html">
+    <link rel="import" href="../dist/example-component.html">
 </head>
 <body>
-<name-paper></name-paper>
+<example-component></example-component>
 <script>
-    suite('<name-paper>', function() {
+    suite('<example-component>', function() {
         test('is awesomest', function() {
-            var namePapers = document.getElementsByTagName('name-paper');
-            assert.isTrue(namePapers.length > 0);
-            assert.isTrue(typeof namePapers[0].yes === 'function');
+            var exampleComponent = document.getElementsByTagName('example-component');
+            assert.isTrue(exampleComponent.length > 0);
+            assert.isTrue(typeof exampleComponent[0].yes === 'function');
         });
     });
 </script>
