--- a/src/example-component.html
+++ b/src/example-component.html
@@ -1,5 +1,12 @@
+<link rel="import" href="./required-component/required-component.html">
 <template id="example-component">
-    <link rel="stylesheet" href="example-component.css">
+    <style>
+        div {
+            background-color: #f5f5f5;
+            color: #000080;
+        }
+    </style>
     <div>example component</div>
+    <required-component></required-component>
 </template>
 <script src="./example-component.js"></script>
