--- a/example.html
+++ b/example.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title></title>
     <script src="./bower_components/webcomponentsjs/webcomponents.js"></script>
+    <script src="./node_modules/es6ify/node_modules/traceur/bin/traceur-runtime.js"></script>
 
     <link rel="import" href="./dist/example-component.html">
 </head>
