--- a/test/default.html
+++ b/test/default.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <script src="../node_modules/es6ify/node_modules/traceur/bin/traceur-runtime.js"></script>
     <script src="../bower_components/webcomponentsjs/webcomponents.js"></script>
     <script src="../node_modules/web-component-tester/browser.js"></script>
     <link rel="import" href="../dist/example-component.html">
