--- a/example.html
+++ b/example.html
@@ -6,7 +6,7 @@
     <script src="./bower_components/webcomponentsjs/webcomponents.js"></script>
     <script src="./node_modules/es6ify/node_modules/traceur/bin/traceur-runtime.js"></script>
 
-    <link rel="import" href="./dist/example-component.html">
+    <link rel="import" href="dist/www/component/example-component.html">
 </head>
 <body>
     <example-component></example-component>
