--- a/test/default.html
+++ b/test/default.html
@@ -5,7 +5,7 @@
     <script src="../node_modules/es6ify/node_modules/traceur/bin/traceur-runtime.js"></script>
     <script src="../bower_components/webcomponentsjs/webcomponents.js"></script>
     <script src="../node_modules/web-component-tester/browser.js"></script>
-    <link rel="import" href="../dist/www/component/example-component.html">
+    <link rel="import" href="../.apptemp/www/component/example-component.html">
 </head>
 <body>
 <example-component></example-component>
